Fix misalignment of icons

--- a/core/templates/dev/head/css/oppia.css
+++ b/core/templates/dev/head/css/oppia.css
@@ -3661,7 +3661,7 @@ md-card.preview-conversation-skin-supplemental-card {
   height: 75px;
   margin: 0 auto;
   position: relative;
-  top: 22px;
+  top: 15%;
   width: 75px;
 }
 
